cluster/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  namespace: pihole
spec:
  selector:
    app: pihole
  type: LoadBalancer
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-admin
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
