cluster/pihole/http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: pihole
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
  hostnames:
    - "pihole.bergtobias.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/" # Route all traffic to root
      backendRefs:
        - name: pihole-web # Kubernetes Service name for Pi-hole
          port: 80
          weight: 100
